# agentic_banking

./: .env  README.md  pyproject.toml
diagrams/: Guardrail.tldr  diagram.tldr  dynamicinstruction.tldr  filepath.tldr  methodoverriding.tldr
src/agentic_banking/: 03.3_Forcing_tool_use_on_Agent.py  _01_1_Agents_with_Model_setting.py  _01_2_Agents_with_Dynamic_instruction.py  _01_3_Agents_with_Model_setting_tool_choices.py  _01_Agents.py  _02_1_Agent_with_Triage_agent.py  _02_1_Agent_with_handoff_input.py  _02_2_Agent_with_handoff_input_filter.py  _02_3_Agent_with_handoff_input_with_OpenAIClient.py  _02_Agent_handoff_with_Triage_agent.py  _03_1_1_Agent_with_Custom_function_tool.py  _03_1_3_Agent_with_Custom_function_tool_Pydantic_return.py  _03_1_Agent_with_Hosted_tools.py  _03_2_1_Customized_tool_with_ToolBaseClass_in_Agent.py  _03_2_Agents_with_Agents_as_tools.py  _03_3_1_Agents_with_tools_Errors.py  _03_3_Forcing_tool_use_on_Agent.py  _03_4_Agent_stop_at_specific_tool.py  _03_5_Agent_tool_choice_in_model_setting.py  _03_6_Agent_infinite_loop_in_and_human_inthe_loop.py  _03_Agent_with_Tool.py  _04_1_Agents_with_Runner_run.py  _04_3_Agents_with_Runner_streaming.py  _05_2_Agents_with_local_context_llm_level_context.py  _06_Agents_with_llm_Context.py  _07_1_Agents_with_input_Guardrails.py  _07_Agents_with_Guardrails.py  _09_1_Agents_with_Tool_Structure_output.py  _09_Agents_with_Structure_output.py  _10_1_Agent_with_Lifecycle_run_hooks.py  _10_2_Agent_with_Lifecycle_agent_hooks.py  _10_3_Agent_with_Lifecycle_agent_run_hooks.py  _10_Agent_with_Lifecycle.py  _11_Agent_Cloning_copying_agents.py  _13_2_Agent_tracing_with_agent_ops.py  _13_3_Agent_tracing_with_local_tracer.py  _13_4_Agent_tracing_repo.py  _13_Agent_tracing.py  _14_Agent_Result_to_input_list.py  _15_Agent_with_Custom_Runner.py  (+4 more)
src/agentic_banking/01_prompt-guide/: README.md
src/agentic_banking/02_prompt-guide/: README.md
src/agentic_banking/KagglePromptEngineering/: README.md
src/agentic_banking/diagrams/: dia1.tldr
src/agentic_banking/explaination_docs/: LifeCycle_AgentAndRunHooks.md  RunContextWrapper.md  RunResult.md  Tools.md  _01_1_Agents_with_Model_setting.md  _01_2_Agents_with_Dynamic_instruction.md  _01_3_Tools.md  _01_4_difference_btwn_toolMessage_ToolScheme.md  agentException.md  local_context.md  run_with_custom_instruction.md  run_with_grok_thinking.md  tracing_with_custom_instruction.md  tracing_with_grok_thinking.md
src/agentic_banking/level02/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  _01_1_Agents_with_Model_setting.py  level02.md  list.md  temp0Andtopp0.txt  temp1Andtopp1.txt  temp5Andtopp5.txt  temp9Andtopp95.txt
src/agentic_banking/level02/Asyncio/: README.md  Reading.md
src/agentic_banking/mcqs/: 1_OpenAI Agents SDK MCQ Quiz.markdown  2_OpenAI Agents SDK MCQ Quiz - Additional Questions.markdown
