[project]
name = "agentic-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents[litellm]>=0.0.13",
]

[project.scripts]
agentic-banking = "agentic_banking:main"
exe01 = "agentic_banking:_01_Agents.main"
exe02 = "agentic_banking:_01_1_Agents_with_Model_setting.main"
exe03 = "agentic_banking:_01_2_Agents_with_Dynamic_instruction.main"
exe04 = "agentic_banking:_02_Agent_handoff_with_Triage_agent.main"
exe05 = "agentic_banking:_02_1_Agent_with_handoff_input.main"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
