[project]
name = "agentic-banking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Safdar Ali Shah", email = "programmersafdar@live.com" }
]
requires-python = ">=3.11"
dependencies = [
    "agentops>=0.4.16",
    "openai-agents[litellm]>=0.0.13",
    "python-dotenv>=1.1.0",
]

[project.scripts]
agentic-banking = "agentic_banking:main"
agent1 = "agentic_banking:_01_Agents.main"
exe02 = "agentic_banking:_01_1_Agents_with_Model_setting.main"
03 = "agentic_banking:_01_2_Agents_with_Dynamic_instruction.main"
exe04 = "agentic_banking:_02_Agent_handoff_with_Triage_agent.main"
021 = "agentic_banking:_02_1_Agent_with_handoff_input.main"
exe031= "agentic_banking:_03_Agent_with_Tool.main"
exe0321 = "agentic_banking:_03_2_1_Customized_tool_with_ToolBaseClass_in_Agent.main"
exe034 = "agentic_banking:_03_4_Agent_stop_at_specific_tool.main"
exe035 = "agentic_banking:_03_5_Agent_tool_choice_in_model_setting.main"
exe036 = "agentic_banking:_03_6_Agent_infinite_loop_in_and_human_inthe_loop.main"
exe099 = "agentic_banking:_03_1_1_Agent_with_Custom_function_tool.main"
agentrunhook = "agentic_banking:_10_3_Agent_with_Lifecycle_agent_run_hooks.main"
agenthooks = "agentic_banking:_10_2_Agent_with_Lifecycle_agent_hooks.main"
runhooks = "agentic_banking:_10_1_Agent_with_Lifecycle_run_hooks.main"
agentlifecycle = "agentic_banking:_10_Agent_with_Lifecycle.main"
cloneagent = "agentic_banking:_11_Agent_Cloning_copying_agents.main"
14 = "agentic_banking:_14_Agent_Result_to_input_list"
041 = "agentic_banking:_04_1_Agents_with_Runner_run.main"
tracing = "agentic_banking:_13_Agent_tracing.main"
trace2 = "agentic_banking:_13_4_Agent_tracing_repo.main"
313 = "agentic_banking:_03_1_3_Agent_with_Custom_function_tool_Pydantic_return.main"
09 = "agentic_banking:_09_Agents_with_Structure_output.main"
091 = "agentic_banking:_09_1_Agents_with_Tool_Structure_output.main"
06 = "agentic_banking:_06_Agents_with_llm_Context.main"
023 = "agentic_banking:_02_3_Agent_with_handoff_input_with_OpenAIClient.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
